Here's the commented version of the code:

```c++
# Copyright 2023 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python implementation of the GRPC helloworld.Greeter server with keepAlive options."""

from concurrent import futures
import logging
from time import sleep

import grpc
import helloworld_pb2
import helloworld_pb2_grpc

class Greeter(helloworld_pb2_grpc.GreeterServicer):
    def SayHello(self, request, context):
        """Implementation of the SayHello RPC method.
        
        Args:
            request: Contains the client's message (HelloRequest protobuf)
            context: RPC context information
            
        Returns:
            HelloReply protobuf containing the response message
            
        Note:
            If the message starts with "[delay]", the server will sleep for 5 seconds
            before responding, simulating a delayed response.
        """
        message = request.name
        if message.startswith("[delay]"):
            sleep(5)
        return helloworld_pb2.HelloReply(message=message)

def serve():
    """Starts the gRPC server with keepalive and connection management options.
    
    Server Options Explanation:
        grpc.keepalive_time_ms: The period (in milliseconds) after which a keepalive ping is
            sent on the transport.
        grpc.keepalive_timeout_ms: The amount of time (in milliseconds) the sender of the keepalive
            ping waits for an acknowledgement. If it does not receive an acknowledgement within
            this time, it will close the connection.
        grpc.http2.min_ping_interval_without_data_ms: Minimum allowed time (in milliseconds)
            between a server receiving successive ping frames without sending any data/header frame.
        grpc.max_connection_idle_ms: Maximum time (in milliseconds) that a channel may have no
            outstanding rpcs, after which the server will close the connection.
        grpc.max_connection_age_ms: Maximum time (in milliseconds) that a channel may exist.
        grpc.max_connection_age_grace_ms: Grace period (in milliseconds) after the channel
            reaches its max age.
        grpc.http2.max_pings_without_data: How many pings can the client send before needing to
            send a data/header frame.
        grpc.keepalive_permit_without_calls: If set to 1 (0 : false; 1 : true), allows keepalive
            pings to be sent even if there are no calls in flight.
            
    For more details, check: https://github.com/grpc/grpc/blob/master/doc/keepalive.md
    """
    # Configure server keepalive and connection management options
    server_options = [
        # Send keepalive ping every 20 seconds
        ("grpc.keepalive_time_ms", 20000),
        # Wait 10 seconds for ping ack before closing connection
        ("grpc.keepalive_timeout_ms", 10000),
        # Minimum 5 seconds between pings without data
        ("grpc.http2.min_ping_interval_without_data_ms", 5000),
        # Close idle connections after 10 seconds
        ("grpc.max_connection_idle_ms", 10000),
        # Maximum connection lifetime of 30 seconds
        ("grpc.max_connection_age_ms", 30000),
        # 5 second grace period after max connection age
        ("grpc.max_connection_age_grace_ms", 5000),
        # Maximum 5 pings without data
        ("grpc.http2.max_pings_without_data", 5),
        # Allow keepalive pings without active calls
        ("grpc.keepalive_permit_without_calls", 1),
    ]
    
    port = "50051"
    # Create gRPC server with thread pool and configured options
    server = grpc.server(
        thread_pool=futures.ThreadPoolExecutor(max_workers=10),
        options=server_options,
    )
    # Register the Greeter service implementation
    helloworld_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
    # Listen on all interfaces on the specified port
    server.add_insecure_port("[::]:" + port)
    # Start the server
    server.start()
    print("Server started, listening on " + port)
    # Keep server running until terminated
    server.wait_for_termination()

if __name__ == "__main__":
    # Configure basic logging
    logging.basicConfig()
    # Start the server
    serve()
```