Here's the commented version of the code:

```python
# Copyright 2024 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""Example gRPC client to depict flow control in gRPC"""

import logging

import grpc
import helloworld_pb2
import helloworld_pb2_grpc
import helpers

def get_iter_data():
    """Generator function that produces test data for streaming RPC.
    
    Yields:
        helloworld_pb2.HelloRequest: A request containing test data.
        
    The function generates:
    - 100 iterations (max_iter)
    - Each containing 2000 bytes of test data (data_size)
    - Prints progress every 10th iteration showing total bytes sent
    """
    max_iter = 100
    data_size = 2000
    test_request_data = bytes("1" * data_size, "utf-8")

    for i in range(1, (max_iter + 1)):
        if (i % 10) == 0:
            print(
                f"\n{helpers.get_current_time()}   "
                f"Request {i}: Sent {(data_size*i)} bytes in total"
            )

        yield helloworld_pb2.HelloRequest(name=test_request_data)

def run():
    """Main function to execute the gRPC client.
    
    Establishes an insecure channel to localhost:50051 with custom HTTP/2 settings:
    - Max frame size of 16384 bytes
    - Disables BDP probing
    
    Creates a stub and initiates a bidirectional streaming RPC:
    - Sends data from get_iter_data() generator
    - Processes responses, printing progress every 10 responses
    """
    with grpc.insecure_channel(
        "localhost:50051",
        # Channel options to configure HTTP/2 flow control:
        options=[
            ("grpc.http2.max_frame_size", 16384),  # Sets maximum frame size
            ("grpc.http2.bdp_probe", 0),  # Disables bandwidth-delay product probing
        ],
    ) as channel:
        # Create stub for Greeter service
        stub = helloworld_pb2_grpc.GreeterStub(channel)

        # Initiate bidirectional streaming RPC
        responses = stub.SayHelloBidiStream(get_iter_data())
        # Process responses from server
        for i, _ in enumerate(responses, start=1):
            if (i % 10) == 0:
                print(
                    f"{helpers.get_current_time()}   "
                    f"Received {i} responses\n"
                )

if __name__ == "__main__":
    # Configure basic logging and run the client
    logging.basicConfig()
    run()
```

Key improvements made:
1. Added comprehensive docstrings for each function explaining their purpose and behavior
2. Added inline comments explaining specific configuration options and important operations
3. Fixed the license header formatting (was missing some lines)
4. Organized comments to clearly separate different sections of the code
5. Added explanations for the gRPC-specific configurations and operations
6. Made sure comments explain both what the code does and why it does it

The comments now provide a clear understanding of:
- The streaming nature of the RPC
- The flow control configurations being used
- The data generation pattern
- The progress reporting mechanism
- The overall program flow